Feat: Lex = Reading File

--- a/lexical_analyzer/Makefile
+++ b/lexical_analyzer/Makefile
@@ -2,10 +2,19 @@
 #all: lum
 
 # Compile the lexer and parser
+
+INPUT_FILE = testCase.txt
+
+# Build the executable
+all: lum
+
 lum: 
 	lex lumiere.l
 	yacc -d parser.y
 	gcc -o lumiere lex.yy.c y.tab.c -ll
+
+run: lum
+	./lumiere $(INPUT_FILE)
 
 # Clean the generated files
 clean:
